modular_sensor_actuator/build/log/idf_py_stdout_output_123170
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/bootloader && /home/mike/.espressif/python_env/idf6.1_py3.12_env/bin/python /home/mike/CodeProjects/ESP32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/11] No install step for 'bootloader'
[3/11] Building C object esp-idf/osal/CMakeFiles/__idf_osal.dir/freertos/freertos.c.obj
FAILED: esp-idf/osal/CMakeFiles/__idf_osal.dir/freertos/freertos.c.obj 
/home/mike/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-3669-gc32c7152ef-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/config -I/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_libc/platform_include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/config/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/config/include/freertos -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/config/xtensa/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/esp_additions/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/include/soc -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/ldo/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/debug_probe/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/etm/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/power_supply/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/modem/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/port/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/heap/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/heap/tlsf -I/home/mike/CodeProjects/ESP32/esp-idf/components/log/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/esp32 -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/esp32/register -I/home/mike/CodeProjects/ESP32/esp-idf/components/hal/platform_port/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/hal/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/hal/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/esp32 -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_common/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_system/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_system/port/soc -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_system/port/include/private -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_stdio/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/xtensa/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/xtensa/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/xtensa/deprecated_include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_gpio/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_gpio/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_usb/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_pmu/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_pmu/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_regi2c/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_regi2c/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_ana_conv/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_dma/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_i2s/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_i2s/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/include/apps -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/lwip/src/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/freertos/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/esp32xx/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/esp32xx/include/sys @"/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator=. -fmacro-prefix-map=/home/mike/CodeProjects/ESP32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/osal/CMakeFiles/__idf_osal.dir/freertos/freertos.c.obj -MF esp-idf/osal/CMakeFiles/__idf_osal.dir/freertos/freertos.c.obj.d -o esp-idf/osal/CMakeFiles/__idf_osal.dir/freertos/freertos.c.obj -c /home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c:4:71: error: 'freertos_tasknotify_give_from_ISR' undeclared here (not in a function); did you mean 'osal_task_notify_give_from_isr'?
    4 | osal_task_notify_give_from_isr  osal_task_notify_give_from_isr_func = freertos_tasknotify_give_from_ISR;
      |                                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                       osal_task_notify_give_from_isr
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c:5:71: error: 'freertos_get_current_task_handle' undeclared here (not in a function); did you mean 'osal_get_current_task_handle'?
    5 | osal_get_current_task_handle    osal_get_current_task_handle_func   = freertos_get_current_task_handle;
      |                                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                       osal_get_current_task_handle
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c: In function 'freertos_tasknotify_give_from_ISR':
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c:36:1: error: expected ',' or ';' before '}' token
   36 | }
      | ^
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c:42:1: error: expected declaration or statement at end of input
   42 | }
      | ^
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c:32:16: warning: unused variable 'xHigherPriorityTaskWoken' [-Wunused-variable]
   32 |     BaseType_t xHigherPriorityTaskWoken = pdFALSE
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c: At top level:
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/osal/freertos/freertos.c:39:6: warning: 'freertos_get_current_task_handle' defined but not used [-Wunused-function]
   39 | void freertos_get_current_task_handle(osal_taskhandle_t* task_handle)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[4/11] Completed 'bootloader'
ninja: build stopped: subcommand failed.
